[package]
name = "attempted"
version = "0.1.0"
edition = "2021"
description = "Wrap a function with 'unwrap or return'"
documentation = "https://docs.rs/attempted/latest"
authors = ["Hjalte C. Nannestad"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ChangeCaps/attempted"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
